--- a/output/theme/css/custom.css
+++ b/output/theme/css/custom.css
@@ -1,6 +1,8 @@
 body {
     background-color: #ffffff;
-    font-size: 1.5rem;
+    font-size: 24px;
+    color: #08415c;
+    font-family: Helvetica, Georgia, Serif;
 }
 
 a {
@@ -8,8 +10,19 @@ a {
     text-decoration: none;
 }
 
+h2 {
+  color: #7fb069;
+  text-transform: uppercase; 
+}
+
+h3 {
+  color: #7fb069;
+  text-transform: uppercase; 
+}
+
 .navbar {
     margin-bottom: 10px;
+    background-color: #08415c;
 }
 
 .navbar ul {
@@ -28,7 +41,7 @@ a {
 
 .navbar li a {
     display: block;
-    color: #6C7A89;
+    color: #d2d7d3;
     text-align: center;
     text-decoration: none;
 }
@@ -51,60 +64,78 @@ a {
 }
 
 sidebar {
-    font-size: 1.25em;
-    width: 15%; 
+    font-size: 1em;
     height: 100%;
-    position: fixed;
-    right: 0;
-    padding: 2%;
+    padding: 1%;
     text-align: center;
     background-size: cover;
+    box-sizing: border-box;
+
 }
 
 sidebar > ul {
+    border: 2px solid #d2d7d3;
     list-style-type: none;
-    padding: 0px 10px;
-    margin-top: 0px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .static-item {
     text-transform: uppercase;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 .cat-border {
-    border: 2px solid #6C7A89;
     text-transform: uppercase;
+    display: none;
+    visibility: hidden;
 }
 
 .cat-border a:focus,
 .cat-border a:hover {
-    color: #F2F1EF;
-    background-color: #6C7A89;
-    padding: 1%;
+    display: none;
+    visibility: hidden;
+}
+
+sidebar > ul > li{
+  display:inline;
+  padding: 1%;
 }
 
 sidebar > ul > li > a:hover,
 sidebar > ul > li > a:focus {
-    color: #F2F1EF;
-    background-color: #6C7A89;
+    color: #08415c;
+    background-color: #d2d7d3;
     padding: 1%;
 }
 
 sidebar > h2 {
-    font-size: 15px;
+    font-size: larger;
     margin-bottom: 5px;
     padding-bottom: 3%;
 }
 
 maincontent {
-    display: block;
+    display: inherit;
     line-height: 1.6em;
-    width: 85%;
+    box-sizing: content-box;
+    width: 100%;
+}
+
+maincontent > h3 {
+    font-size: larger;
+    margin-bottom: 5px;
+    padding-bottom: 3%;
+    color: #6b0504;
 }
 
 maincontent > ol {
     list-style-type: none;
+}
+
+maincontent > a {
+  color: #d47500;
 }
 
 mainarticle ul {
@@ -211,11 +242,11 @@ ul {
 
   maincontent {
     width: 75%;
-    font-size: 10px;
+    font-size: initial;
   }
 
   maincontent h2 {
-    font-size: 2rem;
+    font-size: larger;
   }
 
   maincontent h5 {
@@ -267,6 +298,7 @@ ul {
 
   maincontent h2 {
     font-size: 2rem;
+    color: #d47500;
   }
 
   maincontent h5 {
