--- a/pelican-themes/graymill/static/css/custom.css
+++ b/pelican-themes/graymill/static/css/custom.css
@@ -65,6 +65,7 @@ h3 {
 
 sidebar {
     font-size: 1em;
+    position: inherit;
     height: 100%;
     padding: 1%;
     text-align: center;
@@ -288,7 +289,7 @@ ul {
     width: 15%;
     padding: 0;
     padding-top: 1px;
-    font-size: 8px;
+    font-size: 20px;
   }
 
   maincontent {
