--- a/pelican-themes/graymill/static/css/custom.css
+++ b/pelican-themes/graymill/static/css/custom.css
@@ -5,9 +5,36 @@ body {
     font-family: Helvetica, Georgia, Serif;
 }
 
+footer {
+    margin-top: 2em;
+    background-color: #08415c;
+    box-sizing: auto;
+
+}
+
+copyright {
+    display: inherit;
+    color: #d2d7d3;
+    text-align: center;
+    box-sizing: content-box;
+    margin: auto;
+    width: 80%;
+    padding: 1em;
+}
+
+copyright a {
+    color: #7fb069;
+}
+
 a {
-    color: #6C7A89;
+    color: #434c55;
     text-decoration: none;
+}
+
+h1 {
+  color: #7fb069;
+  text-transform: capitalize; 
+  text-align: center;
 }
 
 h2 {
@@ -17,11 +44,11 @@ h2 {
 
 h3 {
   color: #7fb069;
-  text-transform: uppercase; 
+  text-transform: capitalize; 
 }
 
 .navbar {
-    margin-bottom: 10px;
+    margin-bottom: .5em;
     background-color: #08415c;
 }
 
@@ -174,7 +201,7 @@ maincontent table tbody tr td .highlight {
 }
 
 hr {
-    border-top: 0.3rem double #6C7A89;
+    border-top: 0.3rem double #08415c;
 }
 
 pre {
@@ -196,7 +223,9 @@ ul {
 }
 
 .social-icons-m {
-    max-width: 20%;
+    max-width: 3%;
+    width: 2%;
+    margin: auto;
 }
 
 .pagination-dir {
@@ -208,106 +237,6 @@ ul {
     background: #f4f5f6; 
     font-weight: bold; 
     font-style: italic; 
-    color: #6C7A89; 
+    color: #08415c; 
     text-decoration: none;
-}
-
-@media (max-width: 40.0rem) {
-
-  .navbar {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .navbar li {
-    float: none;
-    padding: initial;
-    text-align: center
-  }
-  
-  .navbar li h6 {
-    line-height: initial;
-    font-size: 0.75em;
-    letter-spacing: 0;
-  }
-
-  sidebar {
-    right: 0;
-    max-width: none;
-    position: fixed;
-    width: 25%;
-    padding: 0;
-    padding-top: 1px;
-    font-size: 8px;
-  }
-
-  maincontent {
-    width: 75%;
-    font-size: initial;
-  }
-
-  maincontent h2 {
-    font-size: larger;
-  }
-
-  maincontent h5 {
-    font-size: 1.4rem;
-  }
-    
-  mainarticle ul li p {
-    padding-left: 5%;
-    margin-top: -6%;
-  }
-
-  .social-icons-a {
-    max-width: 10%;
-  }
-}
-
-@media (min-width: 41.0rem) and (max-width: 80.0rem){
-  .navbar {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .navbar li {
-    float: none;
-    padding: initial;
-    text-align: center
-  }
-
-  .navbar li h6 {
-    line-height: initial;
-    font-size: 0.75em;
-    letter-spacing: 0;
-  }
-
-  sidebar {
-    right: 0;
-    max-width: none;
-    position: fixed;
-    width: 15%;
-    padding: 0;
-    padding-top: 1px;
-    font-size: 20px;
-  }
-
-  maincontent {
-    width: 85%;
-    font-size: 10px;
-  }
-
-  maincontent h2 {
-    font-size: 2rem;
-    color: #d47500;
-  }
-
-  maincontent h5 {
-    font-size: 1.4rem;
-  }
-
-  mainarticle ul li p {
-    padding-left: 5%;
-    margin-top: -2%;
-  }
 }
